[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
criterion = { version = "0.8.2", features = ["html_reports"] }
futures = "0.3.32"
http-body-util = "0.1.3"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
tokio = { version = "1.49.0", features = ["full"] }

[[bench]]
name = "rate_limit_bench"
harness = false

[features]
single-lock = []
bench = []
